# safebear

./: .gitignore  README.md  Taskfile.yml  admin.graphql  app.graphql  safebear.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.devcontainer/library-scripts/: common-debian.sh
js/apps/admin/: .eslintrc.cjs  .gitignore  LICENSE  README.md  Taskfile.yml  codegen.yml  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
js/apps/admin/src/: app.html  tailwind.css
js/apps/admin/src/Components/MainPage/: MainPage.svelte
js/apps/admin/src/Components/MultiSelect/: MultiSelect.svelte
js/apps/admin/src/Components/SideBar/: SideBar.svelte
js/apps/admin/src/Components/Svg/: GestionAdmin_SVG.svelte  Labellisation_SVG.svelte  Utilisateurs_SVG.svelte
js/apps/admin/src/Layout/SafeBearAdmin/: SafeBearAdmin.svelte
js/apps/admin/src/components/: Input.svelte  Sidebar.svelte
js/apps/admin/src/lib/: siteConfig.js  types.d.ts
js/apps/admin/src/lib/graphql/: users.graphql
js/apps/admin/src/routes/: +error.svelte  +layout.svelte  +page.svelte
js/apps/admin/src/routes/GestionAdmin/: +page.svelte
js/apps/admin/src/routes/Labellisation/: +page.svelte
js/apps/admin/src/routes/Utilisateurs/: +page.svelte
js/apps/admin/src/routes/example/: +page.svelte
js/apps/admin/src/routes/gestion-admin/: +layout.svelte  +page.svelte  data.ts
js/apps/admin/src/routes/gestion-admin/[admin]/: +page.svelte  +page.ts
js/apps/admin/src/routes/labellisation/: +page.svelte
js/apps/admin/src/routes/utilisateurs/: +layout.svelte  +page.svelte  data.ts
js/apps/admin/src/routes/utilisateurs/[utilisateur]/: +page.svelte  +page.ts
js/apps/admin/src/store/: search.ts
js/apps/admin/tests/: test.js
js/apps/app/: README.md
js/apps/web/: package-lock.json  package.json  pnpm-lock.yaml
js/apps/web/src/: app.html
js/apps/web/src/lib/: button.svelte  svg.svelte
js/apps/web/src/routes/: +page.svelte
js/apps/web/src/routes/admin/: +page.svelte  main_area-action.svelte  main_area.svelte  sidebar1-item.svelte  sidebar1.svelte  sidebar2-item.svelte  sidebar2.svelte
js/apps/web/src/routes/test/: +page.svelte
js/libs/: README.md
py/: .dockerignore  Dockerfile
py/libs/shared/: README.md  pyproject.toml
py/libs/shared/shared/: events.py  models.py  monitoring.py  settings.py
py/projects/api/: README.md  Taskfile.yml  pyproject.toml
py/projects/api/gql/admin/: admins.gql  labeling.gql  users.gql
py/projects/api/gql/app/: bullies.gql  me.gql  moderation.gql
py/projects/api/scripts/: export_schemas.py
py/projects/api/src/: _types.py  base_models.py  lambda_function.py  server.py
py/projects/api/src/admin/: _types.py  factories.py  inputs.py  models.py  mutations.py  queries.py
py/projects/api/src/app/: _types.py  factories.py  inputs.py  models.py  mutations.py  queries.py
py/projects/api/src/factories/: provider.py
py/projects/api/src/templates/: graphiql.html  voyager.html
py/projects/api/tests/: test_admin_api.py
py/projects/infrastructure/: Pulumi.yaml  Taskfile.yml  __main__.py  pyproject.toml
py/projects/infrastructure/src/: certificates.py  common.py  ecr.py  inference.py  vpc.py
py/projects/infrastructure/src/api/: admin.py  app.py
py/projects/infrastructure/src/dns/: domains.py  google.py  vercel.py  wordpress.py  zone.py
py/projects/infrastructure/stacks/: Pulumi.preview.yaml  Pulumi.prod.yaml
py/projects/nlp/: .gitignore  README.md  Taskfile.yml  poetry.toml  pyproject.toml
py/projects/nlp/notebooks/custom_models/bert-multilingual/: 01-dataset-analyze.ipynb  02-train.ipynb  03-inference.ipynb
py/projects/nlp/notebooks/custom_models/bert-vectorization-and-custom-classifier/: README.md
py/projects/nlp/notebooks/dataset/: dataset_research.ipynb  prepare_sb_dataset.ipynb
py/projects/nlp/notebooks/labelling/: DataLabelingStrategy.md
py/projects/nlp/notebooks/labelling/prodigy_poc/: README.md  custom.py  customdata.jsonl
py/projects/nlp/notebooks/saas_tools/: CompareSaaSSolutions.md  hive-poc.ipynb  samurailabs-poc.ipynb
py/projects/nlp/notebooks/saas_tools/jigsaw_evaluation/: README.md  evaluate.ipynb  jigsaw-on-saas.ipynb  prediction_results.csv
py/projects/nlp/notebooks/saas_tools/openai/: openai-poc-binary.ipynb  openai-poc-merged-labels.ipynb  openai-poc-multi-label.ipynb  openai-poc.ipynb
py/projects/nlp/scripts/: ecr-images.py
py/projects/services/: Taskfile.yml  poetry.toml  pyproject.toml
taskfiles/: docker.yml  pulumi.yml  python.yml
