[tool.poetry]
name = "services"
version = "0.0.0"
description = ""
authors = ["Louis Amon <louis@nuage.studio>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.13.0"
shared = { path = "../../libs/shared", develop = true }

[tool.poetry.group.dev.dependencies]
shared = { path = "../../libs/shared", develop = true, extras = [
    "code-quality",
] }

[tool.poetry.group.notebooks.dependencies]
# Jupyter notebooks
ipykernel = "^6.22.0"
requests = "^2.28.2"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
